--- a/htdocs/index1.htm
+++ b/htdocs/index1.htm
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 
 <!DOCTYPE html>
 <html lang="en">
@@ -89,7 +88,7 @@
         </form>
 
 	  <h2>Thanks for your input !! </h2>
-      <img src="MS.jpg"></img>
+      <img src="apple.jpg"></img>
 	  
 	  
 <div class="row" id="imagePicker">
@@ -196,4 +195,3 @@
   </body>
 </html>
 =======
-
