--- a/htdocs/index1.htm
+++ b/htdocs/index1.htm
@@ -1,6 +1,5 @@
-﻿
-<!DOCTYPE html>
 
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -89,18 +88,8 @@
         </form>
 
 	  <h2>Thanks for your input !! </h2>
-      <img src="MS.jpg"></img>
+      <img src="apple.jpg"></img>
 	  
-	  
-	  	<?php
-$var_a = $_REQUEST['var_a'];
-$var_b = $_REQUEST['var_b'];
-print_r($var_a + $var_b);
-
-?>
-
-
-
 	  
 <div class="row" id="imagePicker">
     <div id="imageDiv" class="ImageSelector" style="opacity: 0; ">
@@ -205,3 +194,4 @@ print_r($var_a + $var_b);
     <script src="./js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
+=======
